--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
   "name": "my-blog",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "react": "^16.3.1",
+    "react-dom": "^16.3.1",
+    "react-redux": "^5.0.7",
+    "redux": "^3.7.2"
+  },
   "scripts": {
     "start": "webpack-dev-server --mode development --open",
     "build": "webpack --mode production"
@@ -17,9 +22,6 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.1.0",
     "mini-css-extract-plugin": "^0.4.0",
-    "react": "^16.3.0",
-    "react-dom": "^16.3.0",
-    "react-scripts": "^1.1.1",
     "webpack": "^4.2.0",
     "webpack-cli": "^2.0.12",
     "webpack-dev-server": "^3.1.1"
